deploy/metricsdemo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metricsdemo
  namespace: dev
  annotations:
    flux.weave.works/automated: 'true'
    flux.weave.works/tag.metricsdemod: glob:*
spec:
  replicas: 4
  selector:
    matchLabels:
      app: metricsdemo
  template:
    metadata:
      labels:
        app: metricsdemo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metricsdemod
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        # readinessProbe:
        #   httpGet:
        #     path: /readyz
        #     port: 3000
        #   initialDelaySeconds: 1
        #   periodSeconds: 5
        #   failureThreshold: 1
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 3000
        #   initialDelaySeconds: 1
        #   periodSeconds: 10
        #   failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
